tests/baselines/reference/internalAliasInterfaceInsideTopLevelModuleWithoutExport.errors.txt
internalAliasInterfaceInsideTopLevelModuleWithoutExport.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasInterfaceInsideTopLevelModuleWithoutExport.ts (1 errors) ====
    export module a {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface I {
        }
    }
    
    import b = a.I;
    export var x: b;
    